[project]
name = "samuelpepys-twitter"
dependencies = [
  "APScheduler",
  "Mastodon.py",
  "pytz",
  "redis",
  "tweepy",
  "atproto",
]
requires-python = "~=3.13.0"
version = "1.0"

[tool.uv.pip]
generate-hashes = true
python-version = "3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyupgrade>=3.21.2",
    "ruff>=0.13.3",
]
